Fixed a new bug on the Deployment Edit page.

--- a/ui/admin/templates/deploymentEdit.html
+++ b/ui/admin/templates/deploymentEdit.html
@@ -19,9 +19,15 @@ $var cssfiles: taskEdit.css taskView.css
 				<textarea id="txtDescription" rows="5" class="code" te_group="detail_fields" column="Description"></textarea>
 				<br />
 				<br />
-				<span class="detail_label">Current Status:</span>
-				<input type="text" id="txtCurrentStatus" class="task_details code" readonly="readonly" />
-				<br />
+                <span class="detail_label">Run State:</span>
+                <input type="text" id="txtRunState" class="task_details code" readonly="readonly" />
+                <br />
+                <span class="detail_label">Services:</span>
+                <input type="text" id="txtServiceCount" class="task_details code" readonly="readonly" />
+                <br />
+                <span class="detail_label">Instances:</span>
+                <input type="text" id="txtInstanceCount" class="task_details code" readonly="readonly" />
+                <br />
 			</div>
 		</div>
 		<div id="div_tags" class="ui-widget-content ui-corner-top toolbox_panel hidden">
