javascript and usability fixes from maestro back to the task run log.

--- a/ui/admin/templates/taskRunLog.html
+++ b/ui/admin/templates/taskRunLog.html
@@ -80,7 +80,7 @@ $var cssfiles: taskRunLog.css
         </table>
         <hr />
     </div>
-    <div class="ui-widget-content ui-corner-all result_summary">
+    <div ID="result_summary" class="ui-widget-content ui-corner-all result_summary hidden">
         <div class="ui-widget-header ui-corner-top result_summary_header">
             Result Summary
         </div>
