Audited references to maestro tables and objects, and cleaned them up.  Cleaned up straggler uses of the ecosystem_id column on task_instance in favor of the 'options' column.
Cleaned up a few calls to add_task_instance passing a value for
ecosystem_id.

--- a/ui/admin/templates/taskRunLog.html
+++ b/ui/admin/templates/taskRunLog.html
@@ -47,8 +47,8 @@ $var cssfiles: taskRunLog.css
                 <td><span id="lblSubmittedBy"></span></td>
             </tr>
             <tr>
-                <td width="150px"><span class="instance_label">Service Instance:</span></td>
-                <td><span id="lblServiceInstanceLabel"></span></td>
+                <td width="150px"><span class="instance_label">Cloud:</span></td>
+                <td><span id="lblCloud"></span></td>
                 <td width="150px"><span class="instance_label">Submitted:</span></td>
                 <td><span id="lblSubmittedDT"></span></td>
             </tr>
