--- a/ui/admin/static/style/taskEdit.css
+++ b/ui/admin/static/style/taskEdit.css
@@ -224,7 +224,10 @@
 
 .toolbox_panel {
 	padding: 10px 4px 4px 4px;
-	height: 500px;
+	position: absolute;
+	width: 96%;
+	bottom: 20px;
+	top: 49px;
 	overflow: auto;
 }
 
