--- a/ui/admin/static/style/taskEdit.css
+++ b/ui/admin/static/style/taskEdit.css
@@ -63,6 +63,7 @@
 }
 
 .category {
+	margin-right: 2px;
 }
 .category_selected {
 	background-color: #e3e3e3 !important;
@@ -74,7 +75,12 @@
 	height: 20px;
 	margin: 2px 6px -4px 0px;
 }
+.subcategories {
+	margin-left: 6px;
+	margin-right: -6px;
+}
 .function {
+	margin-left: 4px !important;
 }
 .function_icon {
 	width: 20px;
@@ -240,7 +246,7 @@
 	background-image: none;
 	background-color: #FBFBFB;
 	cursor: pointer;
-	margin: 0px 0px 2px 4px;
+	margin: 0px 0px 2px 0px;
 	padding-left: 5px;
 	color: #202020;
 	list-style-type: none;
