Fixed a bug saving private key on a shared credential.

--- a/ui/admin/templates/credentialEdit.html
+++ b/ui/admin/templates/credentialEdit.html
@@ -17,8 +17,7 @@ $var cssfiles:
                 <h2>Shared Credentials</h2>
                 <p>
                     The Manage Shared Credentials screen
-                    allows administrators to modify, add and delete credentials that will be shared
-                    by multiple Assets.
+                    allows administrators to modify, add and delete credentials available throughout Cato and other tools.
                 </p>
                 <p>
                     Select a Credential from the list to modify it.  Using the checkboxes,
@@ -28,7 +27,7 @@ $var cssfiles:
                     <i>Credentials in use by Assets cannot be deleted.</i>
                 </p>
                 <p>
-                    <a href="https://github.com/cloudsidekick/cato/wiki/assets#credentials" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+                    <a href="http://docs.cloudsidekick.com/docs/cato/tasks/assets.html#Credentials" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
                     for a more detailed introduction to Credentials.
                 </p>
             </div>
