--- a/ui/admin/templates/settings.html
+++ b/ui/admin/templates/settings.html
@@ -143,70 +143,6 @@ $var cssfiles:
                 </table>
             </div>
         </div>
-        <div id="div_marshaller_detail" class="detail_panel hidden">
-            <div class="ui-widget-content ui-corner-all">
-                <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
-                </div>
-                <table width="100%">
-                    <tr>
-                        <td width="150px" class="row_odd"> Marshaller On / Off </td>
-                        <td class="row_odd">
-                        <select id="Enabled" name="Enabled" class="usertextbox">
-                            <option value="true">on</option>
-                            <option value="false">off</option>
-                        </select></td>
-                    </tr>
-                    <tr>
-                        <td class="row_even"> Loop Delay (seconds) </td>
-                        <td class="row_even">
-                        <input type="text" id="LoopDelay" name="LoopDelay" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
-                        class="usertextbox" MaxLength="5" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="row_odd"> Debug </td>
-                        <td class="row_odd">
-                        <input type="text" id="Debug" name="Debug" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
-                        class="usertextbox" MaxLength="5" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="marshaller" class="save_btn">Save</span></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <div id="div_maestro_detail" class="detail_panel hidden">
-            <div class="ui-widget-content ui-corner-all">
-                <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
-                </div>
-                <table width="100%">
-                    <tr>
-                        <td width="150px" class="row_odd"> Home Canvas </td>
-                        <td class="row_odd">
-                        <input type="text" id="HomeCanvas" name="HomeCanvas" class="usertextbox" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="150px" class="row_odd"> Menu Canvas </td>
-                        <td class="row_odd">
-                        <input type="text" id="MenuCanvas" name="MenuCanvas" class="usertextbox" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="150px" class="row_odd"> Portal Canvas </td>
-                        <td class="row_odd">
-                        <input type="text" id="PortalCanvas" name="PortalCanvas" class="usertextbox" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="maestro" class="save_btn">Save</span></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
         <div id="div_scheduler_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
@@ -351,6 +287,110 @@ $var cssfiles:
                 </table>
             </div>
         </div>
+        <div id="div_maestro_detail" class="detail_panel hidden">
+            <div class="ui-widget-content ui-corner-all">
+                <div class="ui-widget-header">
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
+                </div>
+                <table width="100%">
+                    <tr>
+                        <td width="150px" class="row_odd"> Home Canvas </td>
+                        <td class="row_odd">
+                        <input type="text" id="HomeCanvas" name="HomeCanvas" class="usertextbox" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="150px" class="row_odd"> Menu Canvas </td>
+                        <td class="row_odd">
+                        <input type="text" id="MenuCanvas" name="MenuCanvas" class="usertextbox" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="150px" class="row_odd"> Portal Canvas </td>
+                        <td class="row_odd">
+                        <input type="text" id="PortalCanvas" name="PortalCanvas" class="usertextbox" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="maestro" class="save_btn">Save</span></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div id="div_marshaller_detail" class="detail_panel hidden">
+            <div class="ui-widget-content ui-corner-all">
+                <div class="ui-widget-header">
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
+                </div>
+                <table width="100%">
+                    <tr>
+                        <td width="150px" class="row_odd"> Marshaller On / Off </td>
+                        <td class="row_odd">
+                        <select id="Enabled" name="Enabled" class="usertextbox">
+                            <option value="true">on</option>
+                            <option value="false">off</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td class="row_even"> Loop Delay (seconds) </td>
+                        <td class="row_even">
+                        <input type="text" id="LoopDelay" name="LoopDelay" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
+                        class="usertextbox" MaxLength="5" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="row_odd"> Debug </td>
+                        <td class="row_odd">
+                        <input type="text" id="Debug" name="Debug" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
+                        class="usertextbox" MaxLength="5" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="marshaller" class="save_btn">Save</span></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div id="div_maestroscheduler_detail" class="detail_panel hidden">
+            <div class="ui-widget-content ui-corner-all">
+                <div class="ui-widget-header">
+                    <img src="static/images/icons/sched_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Scheduler Settings</span>
+                </div>
+                <table width="100%">
+                    <tr>
+                        <td width="150px" class="row_odd"> Scheduler On / Off </td>
+                        <td class="row_odd">
+                        <select id="Enabled" name="Enabled" class="usertextbox">
+                            <option value="true">on</option>
+                            <option value="false">off</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td class="row_even"> Loop Delay (seconds) </td>
+                        <td class="row_even">
+                        <input type="text" id="LoopDelay" name="LoopDelay" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
+                        class="usertextbox" MaxLength="5" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="row_odd"> Schedule Minimum Depth </td>
+                        <td class="row_odd">
+                        <input type="text" id="ScheduleMinDepth" name="ScheduleMinDepth" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
+                        class="usertextbox" MaxLength="5" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="row_even"> Schedule Max Days </td>
+                        <td class="row_even">
+                        <input type="text" id="ScheduleMaxDays" name="ScheduleMaxDays" onkeypress="Javascript:return restrictEntryToNumber(event, this);"
+                        class="usertextbox" MaxLength="5" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="maestroscheduler" class="save_btn">Save</span></td>
+                </table>
+            </div>
+        </div>
     </form>
 </div>
 
@@ -371,11 +411,14 @@ $var cssfiles:
             <li class="group_tab" id="messenger">
                 Messenger
             </li>
-            <li class="group_tab" id="marshaller">
-                Marshaller
-            </li>
             <li class="group_tab" id="maestro">
-                Maestro
+                Maestro General
+            </li>
+            <li class="group_tab" id="maestroscheduler">
+                Maestro Scheduler
+            </li>
+            <li class="group_tab" id="marshaller">
+                Maestro Marshaller
             </li>
         </ul>
     </div>
