--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -33,33 +33,33 @@ $def with (content)
                 <link type="text/css" href="static/style/$f" rel="stylesheet" />
 
         <!--jQuery -->
-        <script type="text/javascript" src="static/script/jquery/jquery-1.7.2.min.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery-ui-1.8.21.min.js"></script>
+        <script src="static/script/jquery/jquery-1.7.2.min.js"></script>
+        <script src="static/script/jquery/jquery-ui-1.8.21.min.js"></script>
         <!-- Plugins -->
-        <script type="text/javascript" src="static/script/jquery/jquery.blockUI.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.textarea.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.timers.js"></script>
-        <script type="text/javascript" src="static/script/superfish/hoverIntent.js"></script>
-        <script type="text/javascript" src="static/script/superfish/superfish.js"></script>
-        <script type="text/javascript" src="static/script/superfish/supersubs.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.scrollTo.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.tipTip.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.timepicker.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.base64.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.cookie.js"></script>
-        <script type="text/javascript" src="static/script/jquery/jquery.sortElements.js"></script>
+        <script src="static/script/jquery/jquery.blockUI.js"></script>
+        <script src="static/script/jquery/jquery.textarea.js"></script>
+        <script src="static/script/jquery/jquery.timers.js"></script>
+        <script src="static/script/superfish/hoverIntent.js"></script>
+        <script src="static/script/superfish/superfish.js"></script>
+        <script src="static/script/superfish/supersubs.js"></script>
+        <script src="static/script/jquery/jquery.scrollTo.js"></script>
+        <script src="static/script/jquery/jquery.tipTip.js"></script>
+        <script src="static/script/jquery/jquery.timepicker.js"></script>
+        <script src="static/script/jquery/jquery.base64.js"></script>
+        <script src="static/script/jquery/jquery.cookie.js"></script>
+        <script src="static/script/jquery/jquery.sortElements.js"></script>
         <!-- JavaScript -->
-        <script type="text/javascript" src="static/script/masterpage.js"></script>
-        <script type="text/javascript" src="static/script/MainScript.js"></script>
-        <script type="text/javascript" src="static/script/validation.js"></script>
-        <script type="text/javascript" src="static/script/logViewDialog.js"></script>
-        <script type="text/javascript" src="static/script/ajax.js"></script>
-        <script type="text/javascript" src="static/script/site.master.js"></script>
+        <script src="static/script/masterpage.js"></script>
+        <script src="static/script/MainScript.js"></script>
+        <script src="static/script/validation.js"></script>
+        <script src="static/script/logViewDialog.js"></script>
+        <script src="static/script/ajax.js"></script>
+        <script src="static/script/site.master.js"></script>
 
         <!--Any .js files defined on the content page.-->
         $if content.jsfiles:
             $for f in content.jsfiles.split():
-                <script type="text/javascript" src="static/script/$f"></script>
+                <script src="static/script/$f"></script>
 
     </head>
     <body>
@@ -93,7 +93,7 @@ $:content
             </div>
             <br />
             <!-- dynamic divs below here -->
-            <script type="text/javascript" src="static/script/site.master.common.js"></script>
+            <script src="static/script/site.master.common.js"></script>
             <!-- This is the popup "about" dialog. -->
             <div id="about_dialog" title="About Cato" class="ui-state-highlight">
                 <p>
