--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -33,8 +33,9 @@ $def with (content)
                 <link type="text/css" href="static/style/$f" rel="stylesheet" />
 
         <!--jQuery -->
-        <script src="static/script/jquery/jquery-1.7.2.min.js"></script>
-        <script src="static/script/jquery/jquery-ui-1.8.21.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+        <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script src="//code.jquery.com/jquery-migrate-1.2.1.js"></script>
         <!-- Plugins -->
         <script src="static/script/jquery/jquery.blockUI.js"></script>
         <script src="static/script/jquery/jquery.textarea.js"></script>
