Closes #226 - restrict variable names properly

--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -629,7 +629,7 @@ $var cssfiles: taskEdit.css taskView.css ../script/jquery/jquery.ui.ufd-0.6/css/
         <tr>
             <td width="40%"> Variable: </td>
             <td>
-            <input type="text" id="new_delimited_var_name" class="var_name w100pct code" />
+            <input type="text" id="new_delimited_var_name" class="var_name w100pct code" validate_as="identifier" />
             </td>
         </tr>
         <tr>
@@ -661,7 +661,7 @@ $var cssfiles: taskEdit.css taskView.css ../script/jquery/jquery.ui.ufd-0.6/css/
         <tr>
             <td width="40%"> Variable: </td>
             <td colspan="2">
-            <input type="text" id="new_parsed_var_name" class="var_name w100pct code" />
+            <input type="text" id="new_parsed_var_name" class="var_name w100pct code" validate_as="identifier" />
             </td>
         </tr>
         <tr>
