Closes #225 - jQuery deprecated functions refactored, upgraded to current version.

--- a/ui/admin/static/style/main.css
+++ b/ui/admin/static/style/main.css
@@ -2,7 +2,7 @@
 @import url('text.css');
 @import url('input.css');
 @import url('sizing.css');
-@import url('//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css');
+@import url('jquery-ui-1.8.21.custom.css');
 /*@import url('menu/menu.css');
  @import url('ac_pro/css/ac_pro/jquery-ui-1.7.1.custom.css');*/
 
