--- a/ui/admin/templates/cloudAccountEdit.html
+++ b/ui/admin/templates/cloudAccountEdit.html
@@ -3,144 +3,149 @@ $var jsfiles: managePageCommon.js cloudAccountEdit.js
 $var cssfiles:
 
 <div style="display: none;">
-	<input id="hidMode" type="hidden" name="hidMode" />
-	<input id="hidCurrentEditID" type="hidden" name="hidCurrentEditID" />
-	<input id="hidSelectedArray" type="hidden" name="hidSelectedArray" />
-	<!-- Start visible elements -->
+    <input id="hidMode" type="hidden" name="hidMode" />
+    <input id="hidCurrentEditID" type="hidden" name="hidCurrentEditID" />
+    <input id="hidSelectedArray" type="hidden" name="hidSelectedArray" />
+    <!-- Start visible elements -->
 </div>
 <div id="left_panel">
-	<div id="left_tooltip_img">
-		<img src="static/images/icons/cloud_accounts_192.png" alt="" />
-	</div>
-	<div class="left_tooltip">
-		<div id="left_tooltip_box_outer">
-			<div id="left_tooltip_box_inner">
-				<h2>Cloud Accounts</h2>
-				<p>
-					The Manage Cloud Accounts screen allows administrators
-					to modify, add and delete Cloud Accounts.
-				</p>
-				<p>
-					Select an Account from the list or select an action to edit or delete the Accounts
-					you've selected.
-				</p>
-				<p>
-					<i>Cloud Accounts are required to have a 'default' Cloud.</i>
-				</p>
-				<p>
-					<i>Cloud Accounts can not be deleted if they are associated with any other records.</i>
-				</p>
-				<p>
-					<a href="https://github.com/cloudsidekick/cato/wiki/setup-cloud-account" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
-					for a more detailed introduction to Cloud Accounts.
-				</p>
-			</div>
-		</div>
-	</div>
+    <div id="left_tooltip_img">
+        <img src="static/images/icons/cloud_accounts_192.png" alt="" />
+    </div>
+    <div class="left_tooltip">
+        <div id="left_tooltip_box_outer">
+            <div id="left_tooltip_box_inner">
+                <h2>Cloud Accounts</h2>
+                <p>
+                    The Manage Cloud Accounts screen allows administrators
+                    to modify, add and delete Cloud Accounts.
+                </p>
+                <p>
+                    Select an Account from the list or select an action to edit or delete the Accounts
+                    you've selected.
+                </p>
+                <p>
+                    <i>Cloud Accounts are required to have a 'default' Cloud.</i>
+                </p>
+                <p>
+                    <i>Cloud Accounts can not be deleted if they are associated with any other records.</i>
+                </p>
+                <p>
+                    <a href="https://github.com/cloudsidekick/cato/wiki/setup-cloud-account" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+                    for a more detailed introduction to Cloud Accounts.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 <div id="content">
-	<span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn">&nbsp;</span><span
-	id="item_create_btn">Create</span><span id="item_delete_btn">Delete</span>
-	<input type="text" id="txtSearch" class="search_text" />
-	<span id="item_search_btn">Search</span>
-	<table class="jtable" cellspacing="1" cellpadding="1" width="99%">
-		<thead>
-			<tr>
-				<th class="chkboxcolumn">
-				<input type="checkbox" class="chkbox" id="chkAll" />
-				</th>
-				<th class="sortable">Account Name</th>
-				<th class="sortable">Account Number</th>
-				<th class="sortable">Type</th>
-				<th class="sortable">Login ID</th>
-				<th class="sortable">Default Cloud</th>
-				<th class="sortable">Default?</th>
-			</tr>
-		</thead>
-		<tbody id="accounts"></tbody>
-	</table>
-	<div id="pager"></div>
+    <span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn">&nbsp;</span><span
+    id="item_create_btn">Create</span><span id="item_delete_btn">Delete</span>
+    <input type="text" id="txtSearch" class="search_text" />
+    <span id="item_search_btn">Search</span>
+    <table class="jtable" cellspacing="1" cellpadding="1" width="99%">
+        <thead>
+            <tr>
+                <th class="chkboxcolumn">
+                <input type="checkbox" class="chkbox" id="chkAll" />
+                </th>
+                <th class="sortable">Account Name</th>
+                <th class="sortable">Account Number</th>
+                <th class="sortable">Type</th>
+                <th class="sortable">Login ID</th>
+                <th class="sortable">Default Cloud</th>
+                <th class="sortable">Default?</th>
+            </tr>
+        </thead>
+        <tbody id="accounts"></tbody>
+    </table>
+    <div id="pager"></div>
 </div>
 <div id="edit_dialog" class="hidden" title="Create Account">
-	<table width="100%">
-		<tr>
-			<td> Account Name: </td>
-			<td>
-			<input id="txtAccountName" class="usertextbox" name="txtAccountName" />
-			</td>
-		</tr>
-		<tr>
-			<td> Account Number: </td>
-			<td>
-			<input id="txtAccountNumber" class="usertextbox" name="txtAccountNumber" />
-			</td>
-		</tr>
-		<tr>
-			<td> Provider: </td>
-			<td><select id="ddlProvider"></select></td>
-		</tr>
-		<tr>
-			<td><span id="login_label">Access Key</span>: </td>
-			<td>
-			<input id="txtLoginID" class="usertextbox" name="txtLoginID" />
-			</td>
-		</tr>
-		<tr>
-			<td><span class="password_label">Secret Key</span>: </td>
-			<td>
-			<input id="txtLoginPassword" type="password" class="usertextbox" name="txtLoginPassword" />
-			</td>
-		</tr>
-		<tr>
-			<td><span class="password_label">Secret Key</span> Confirm: </td>
-			<td>
-			<input id="txtLoginPasswordConfirm" type="password" class="usertextbox" name="txtLoginPasswordConfirm" />
-			</td>
-		</tr>
-		<tr>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr>
-			<td> Make Default: </td>
-			<td>
-			<input id="chkDefault" type="checkbox" class="usertextbox" name="chkDefault" />
-			</td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><i>The "default" Account is automatically selected on intial login.</i></td>
-		</tr>
-		<tr style="display: none;">
-			<!--hidden temporarily pending a decision about auto_manage_security-->
-			<td> Auto Security: </td>
-			<td>
-			<input id="chkAutoManageSecurity" type="checkbox" class="usertextbox" name="chkAutoManageSecurity" />
-			</td>
-		</tr>
-		<tr style="display: none;">
-			<!--hidden temporarily pending a decision about auto_manage_security-->
-			<td></td>
-			<td> Automatically grant port access for EC2? (ssh, winrm, etc.) </td>
-		</tr>
-		<tr>
-			<td> Default Cloud: </td>
-			<td><select id="ddlDefaultCloud"></select><span id="jumpto_cloud_btn" title="Edit Cloud">&nbsp;</span><span id="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_cloud_btn" title="Add a Cloud">&nbsp;</span></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><i>The "default" Cloud when using this Account.</i></td>
-		</tr>
-		<tr>
-			<td colspan="2"><div id="conn_test_result" style="margin-top: 10px;"></div><div id="conn_test_error" style="font-size: 0.8em; font-style: italic; margin-top: 10px;"></div></td>
-		</tr>
-	</table>
+    <table width="100%">
+        <tr>
+            <td> Account Name: </td>
+            <td>
+            <input id="txtAccountName" class="usertextbox" name="txtAccountName" />
+            </td>
+        </tr>
+        <tr>
+            <td> Account Number: </td>
+            <td>
+            <input id="txtAccountNumber" class="usertextbox" name="txtAccountNumber" />
+            </td>
+        </tr>
+        <tr>
+            <td> Provider: </td>
+            <td><select id="ddlProvider"></select></td>
+        </tr>
+        <tr>
+            <td><span id="login_label">Access Key</span>: </td>
+            <td>
+            <input id="txtLoginID" class="usertextbox" name="txtLoginID" />
+            </td>
+        </tr>
+        <tr>
+            <td><span class="password_label">Secret Key</span>: </td>
+            <td>
+            <input id="txtLoginPassword" type="password" class="usertextbox" name="txtLoginPassword" />
+            </td>
+        </tr>
+        <tr>
+            <td><span class="password_label">Secret Key</span> Confirm: </td>
+            <td>
+            <input id="txtLoginPasswordConfirm" type="password" class="usertextbox" name="txtLoginPasswordConfirm" />
+            </td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td> Make Default: </td>
+            <td>
+            <input id="chkDefault" type="checkbox" class="usertextbox" name="chkDefault" />
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><i>The "default" Account is automatically selected on intial login.</i></td>
+        </tr>
+        <tr style="display: none;">
+            <!--hidden temporarily pending a decision about auto_manage_security-->
+            <td> Auto Security: </td>
+            <td>
+            <input id="chkAutoManageSecurity" type="checkbox" class="usertextbox" name="chkAutoManageSecurity" />
+            </td>
+        </tr>
+        <tr style="display: none;">
+            <!--hidden temporarily pending a decision about auto_manage_security-->
+            <td></td>
+            <td> Automatically grant port access for EC2? (ssh, winrm, etc.) </td>
+        </tr>
+        <tr>
+            <td> Default Cloud: </td>
+            <td><select id="ddlDefaultCloud"></select><span id="jumpto_cloud_btn" title="Edit Cloud">&nbsp;</span><span id="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_cloud_btn" title="Add a Cloud">&nbsp;</span></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><i>The "default" Cloud when using this Account.</i></td>
+        </tr>
+        <tr>
+            <td colspan="2"><div id="conn_test_result" style="margin-top: 10px;"></div><div id="conn_test_error" style="font-size: 0.8em; font-style: italic; margin-top: 10px;"></div></td>
+        </tr>
+    </table>
 </div>
 
 <div id="delete_dialog" class="hidden" title="Delete">
-	Are you sure you want to delete these Accounts?
-	<br />
-	<br />
-	This action cannot be undone.
+    <p style="font-style: italic; padding: 2px;" class="ui-state-highlight">
+        Some of the selected Accounts may be referenced by automation.
+        <br />
+        <br />
+        Deleting an Account could cause automation to fail.
+        <br />
+        <br />
+        Would you like to delete these Accounts anyway?
+    </p>
 </div>
 
