Fixed issue on taskPrint page.

--- a/ui/admin/templates/taskPrint.html
+++ b/ui/admin/templates/taskPrint.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: taskedit/taskPrint.js taskedit/taskEditParams.js
+$var jsfiles: taskedit/taskPrint.js taskedit/taskEditParams.js parametersOnDialog.js 
 
 $var cssfiles: taskEdit.css taskView.css
 
