--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -301,7 +301,7 @@ $var cssfiles: taskEdit.css taskView.css ../script/jquery/jquery.ui.ufd-0.6/css/
     <p>
         Enter a name for the Codeblock:
     </p>
-    <input id="new_codeblock_name" validate_as="identifier" />
+    <input id="new_codeblock_name" validate_as="identifier" maxlength="32" style="width: 100%;" />
     <div id="codeblock_edit_dialog_msg" style="color: Red;"></div>
 </div>
 <div id="big_box_dialog" title="Edit Value" class="hidden">
