Closes #256 - documentation links now point to the new doc site.

--- a/ui/admin/templates/cloudAccountEdit.html
+++ b/ui/admin/templates/cloudAccountEdit.html
@@ -31,7 +31,7 @@ $var cssfiles:
                     <i>Cloud Accounts can not be deleted if they are associated with any other records.</i>
                 </p>
                 <p>
-                    <a href="https://github.com/cloudsidekick/cato/wiki/setup-cloud-account" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+                    <a href="http://docs.cloudsidekick.com/docs/cato/cloud/cloud-account.html" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
                     for a more detailed introduction to Cloud Accounts.
                 </p>
             </div>
