--- a/ui/admin/templates/taskActivityLog.html
+++ b/ui/admin/templates/taskActivityLog.html
@@ -17,7 +17,7 @@ $var cssfiles:
                     Click on a row to see a detailed log of that Task's execution.  Click the edit icon at the end of the row to edit the Task definition.
                 </p>
                 <p>
-                    <a href="https://github.com/cloudsidekick/cato/wiki/task-development#task-activity-log" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+                    <a href="http://docs.cloudsidekick.com/docs/cato/tasks/task-development.html#task-activity-log" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
                     for a more detailed description of the Task Activity Log.
                 </p>
             </div>
