--- a/ui/admin/templates/assetEdit.html
+++ b/ui/admin/templates/assetEdit.html
@@ -43,7 +43,7 @@ $var cssfiles:
                     an action to modify or delete the Assets you've selected.
                 </p>
                 <p>
-                    <a href="https://github.com/cloudsidekick/cato/wiki/assets" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+                    <a href="http://docs.cloudsidekick.com/docs/cato/tasks/assets.html" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
                     for a more detailed introduction on Assets.
                 </p>
             </div>
