--- a/ui/admin/static/style/login.css
+++ b/ui/admin/static/style/login.css
@@ -56,6 +56,7 @@ body
 	color: #EE4444;
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
 	border-radius: 6px 6px 6px 6px;
+	background-color: #fee;
 }
 .loginannouncement
 {
