New Connection command now stores the asset name instead of uuid in the step xml.  Asset Edit dialog allows backslashes in the address field (for specifying sql server 'instance')

--- a/ui/admin/templates/assetEdit.html
+++ b/ui/admin/templates/assetEdit.html
@@ -106,7 +106,7 @@ $var cssfiles:
                     <tr>
                         <td> Address </td>
                         <td>
-                        <input validate_as="hostname" id="txtAddress" style="width: 200px;" type="text" name="txtAddress" />
+                        <input id="txtAddress" style="width: 200px;" type="text" name="txtAddress" />
                         </td>
                     </tr>
                     <tr>
